updated the README.md file for new install method

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ var/configuration/requirements.py
 var/configuration/st_*.py
 var/configuration/st_*.spec
 application/Stitch_Vars/st_aes**.*
+application/Stitch_Vars/*.ini
